--- a/stylemq.css
+++ b/stylemq.css
@@ -137,9 +137,7 @@
         cursor: pointer;
     }
     .reacted-img{
-        margin-left: 20.4em;
-        margin-top: -6em;
-        height:max-content;
+        display: none;
     }
     .message-box{
         border: 1px solid rgb(215, 215, 215);
@@ -158,6 +156,10 @@
         font-size: 0.9em;
         font-family: "Gill Sans", sans-serif;
         font-weight: 500;
+    }
+
+    body {
+        background-color: white;
     }
     
 }
